--- a/index.html
+++ b/index.html
@@ -76,22 +76,22 @@
             <div class="project">project</div>
             <div class="frame-box1">
                 <div onclick="window.open(`https://gkffgkff.github.io/baduk/`)" class="frame">
-                    <img src="baduk.png" alt="">
+                    <img src="ba.PNG" alt="">
                 </div>
                 <div onclick="window.open(`https://gkffgkff.github.io/insatr/`)" class="frame">
-                    <img src="instar.png" alt="">
+                    <img src="instar.PNG" alt="">
                 </div>
                 <div onclick="window.open(`https://gkffgkff.github.io/cgv/`)" class="frame">
-                    <img src="cgv.png" alt="">
+                    <img src="cgv.PNG" alt="">
                 </div>
                 <div onclick="window.open(`https://gkffgkff.github.io/goll/`)" class="frame">
-                    <img src="gol.png" alt="">
+                    <img src="gols.png" alt="">
                 </div>  
                 <div onclick="window.open(`https://gkffgkff.github.io/iphone/`)" class="frame">
-                    <img src="iphone.jpg" alt="">
+                    <img src="new.PNG" alt="">
                 </div>   
                 <div onclick="window.open(` https://gkffgkff.github.io/saram/`)" class="frame">
-                    <img src="saram.gif" alt="">
+                    <img src="saram.PNG" alt="">
                 </div>   
                 </div>   
 
