--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="hun">
         <div class="l-box">
             <h2 class="hi">Hi I'm Kim-HyungHun</h2>
-            <div class="hashtags"># 서울대 사이버 보안 # 해킹보안 # 학생체험 # 복수전공</div>
+            <div class="hashtags"># 사이버 보안 # 해킹보안 # 학생 </div>
             <p class="introduction">
                 안녕하세요, 전문 화이트해커가 되고 싶은 김형훈 입니다.<br/>
                 끝임없이 코드를 유연하고 확장성있게 만들고 싶어하고,<br/>
@@ -54,7 +54,7 @@
             </div>
             <div class="box">
                 <div class="big-text">해킹 능력</div>
-                <div class="text1">DOS, XSS, 및 DDOS 공격에 대한 기본 이해를 갖추고 있으며, 이러한 보안 공격을 방지하고 대응하기 위해 학습하고자 합니다. 선린고등학교에서 배울 수 있는 기회와 지식을 통해 보안 분야에서 능력을 향상시키고, 컴퓨터 시스템과 웹 애플리케이션의 안전성을 높이는데 기여하고 싶습니다.</div>
+                <div class="text1">DOS, XSS, 및 DDOS 공격에 대한 기본 이해를 갖추고 있으며, 이러한 보안 공격을 방지하고 대응하기 위해 학습하고자 합니다. 한세사이버보안고등학교에서 배울 수 있는 기회와 지식을 통해 보안 분야에서 능력을 향상시키고, 컴퓨터 시스템과 웹 애플리케이션의 안전성을 높이는데 기여하고 싶습니다.</div>
                 <img class="hecking-img"src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTUEoLEcJnp3Evx_IVbFEACKUsfdEzRNUCqA&usqp=CAU" alt="">
             </div>
             <div class="box">
@@ -64,7 +64,7 @@
             </div>
             <div class="box">
                 <div class="big-text">학력</div>
-                <div class="text2">창천초등학교와 창천중학교에서 꾸준한 교육을 받았습니다. 이 경험은 학업에 대한 강한 기반을 제공하고, 미래에도 끊임없이 성장하는데 기여했습니다. 이제 선린고에서 새로운 도전에 임하려 합니다.</div>
+                <div class="text2">창천초등학교와 창천중학교에서 꾸준한 교육을 받았습니다. 이 경험은 학업에 대한 강한 기반을 제공하고, 미래에도 끊임없이 성장하는데 기여했습니다. 이제 한세사이버보안고등하교에서 새로운 도전에 임하려 합니다.</div>
                 <img class="hecking-img"src="https://images.unsplash.com/20/cambridge.JPG?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8JUVCJThDJTgwJUVEJTk1JTk5fGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60" alt="">
             </div>
         </div>
